--- a/Clustering_examples.ipynb
+++ b/Clustering_examples.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:27:01.011346Z",
-     "start_time": "2024-05-04T21:27:01.009141Z"
+     "end_time": "2024-05-04T21:57:13.991964Z",
+     "start_time": "2024-05-04T21:57:13.989749Z"
     }
    },
    "source": [
@@ -19,13 +19,13 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 59
+   "execution_count": 111
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T20:26:04.122732Z",
-     "start_time": "2024-05-04T20:26:04.114699Z"
+     "end_time": "2024-05-04T21:57:14.023170Z",
+     "start_time": "2024-05-04T21:57:14.017026Z"
     }
    },
    "cell_type": "code",
@@ -167,18 +167,18 @@
        "</div>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 48
+   "execution_count": 112
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T20:26:05.858536Z",
-     "start_time": "2024-05-04T20:26:05.855480Z"
+     "end_time": "2024-05-04T21:57:14.026589Z",
+     "start_time": "2024-05-04T21:57:14.024432Z"
     }
    },
    "cell_type": "code",
@@ -195,12 +195,12 @@
        "(83, 4)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 113
   },
   {
    "metadata": {},
@@ -211,8 +211,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:44:52.177471Z",
-     "start_time": "2024-05-04T21:44:51.935371Z"
+     "end_time": "2024-05-04T21:57:14.359Z",
+     "start_time": "2024-05-04T21:57:14.027094Z"
     }
    },
    "cell_type": "code",
@@ -311,18 +311,18 @@
        "       [ 1.7700393 , -0.05017296]], dtype=float32)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 73
+   "execution_count": 114
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:45:29.289482Z",
-     "start_time": "2024-05-04T21:45:29.189661Z"
+     "end_time": "2024-05-04T21:57:14.450434Z",
+     "start_time": "2024-05-04T21:57:14.360344Z"
     }
    },
    "cell_type": "code",
@@ -346,7 +346,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 76
+   "execution_count": 115
   },
   {
    "metadata": {},
@@ -357,8 +357,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:51:47.757447Z",
-     "start_time": "2024-05-04T21:51:47.754110Z"
+     "end_time": "2024-05-04T21:57:14.453768Z",
+     "start_time": "2024-05-04T21:57:14.451115Z"
     }
    },
    "cell_type": "code",
@@ -368,13 +368,13 @@
    ],
    "id": "d5219767906b1c21",
    "outputs": [],
-   "execution_count": 98
+   "execution_count": 116
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:51:48.020581Z",
-     "start_time": "2024-05-04T21:51:48.017150Z"
+     "end_time": "2024-05-04T21:57:14.456235Z",
+     "start_time": "2024-05-04T21:57:14.454420Z"
     }
    },
    "cell_type": "code",
@@ -396,13 +396,13 @@
      ]
     }
    ],
-   "execution_count": 99
+   "execution_count": 117
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:51:48.388629Z",
-     "start_time": "2024-05-04T21:51:48.332047Z"
+     "end_time": "2024-05-04T21:57:14.513477Z",
+     "start_time": "2024-05-04T21:57:14.457003Z"
     }
    },
    "cell_type": "code",
@@ -455,7 +455,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 100
+   "execution_count": 118
   },
   {
    "metadata": {},
@@ -466,8 +466,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:54:28.427346Z",
-     "start_time": "2024-05-04T21:54:28.423007Z"
+     "end_time": "2024-05-04T21:57:14.517375Z",
+     "start_time": "2024-05-04T21:57:14.514061Z"
     }
    },
    "cell_type": "code",
@@ -477,13 +477,13 @@
    ],
    "id": "5640cfc1f20f5a38",
    "outputs": [],
-   "execution_count": 109
+   "execution_count": 119
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-04T21:54:29.033353Z",
-     "start_time": "2024-05-04T21:54:28.977144Z"
+     "end_time": "2024-05-04T21:57:14.575064Z",
+     "start_time": "2024-05-04T21:57:14.519067Z"
     }
    },
    "cell_type": "code",
@@ -505,15 +505,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 110
+   "execution_count": 120
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-04T21:57:14.577089Z",
+     "start_time": "2024-05-04T21:57:14.575844Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "1ee1402bc48b9920"
+   "id": "1ee1402bc48b9920",
+   "outputs": [],
+   "execution_count": 120
   }
  ],
  "metadata": {
