Fixed radar charts

--- a/Clustering_examples.ipynb
+++ b/Clustering_examples.ipynb
@@ -1289,18 +1289,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-10T17:44:48.432751Z",
-     "start_time": "2024-05-10T17:44:48.247198Z"
+     "end_time": "2024-05-10T17:47:10.318477Z",
+     "start_time": "2024-05-10T17:47:10.146310Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "fig_4 = go.Figure(\n",
+    "fig_5 = go.Figure(\n",
     "    data=[go.Scatterpolar(r=cluster_0_max * rescale_vector, theta=theta, mode='lines', fill='toself',fillcolor='rgba(0,100,80,0.2)', name='cluster 0'),\n",
     "          go.Scatterpolar(r=cluster_1_max * rescale_vector, theta=theta, mode='lines', fill='toself',fillcolor='rgba(0,100,80,0.2)', name='cluster 1'),\n",
     "          ],\n",
     "    layout=go.Layout(\n",
-    "        title=go.layout.Title(text='Cluster 1 bounding box'),\n",
+    "        title=go.layout.Title(text='Both cluster bounding boxes'),\n",
     "        polar=dict(\n",
     "            radialaxis=dict(\n",
     "                visible=True,\n",
@@ -1310,17 +1310,17 @@
     "        showlegend=True\n",
     "    )\n",
     ")\n",
-    "pyo.plot(fig_4)\n",
-    "fig_4.write_image('./fig_4.png')"
+    "pyo.plot(fig_5)\n",
+    "fig_5.write_image('./fig_5.png')"
    ],
    "id": "370beceae0b8670",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 27
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "![alt text](./fig_4.png)",
+   "source": "![alt text](./fig_5.png)",
    "id": "a8ee551e3291e398"
   },
   {
