Added anaglesic check

--- a/fingerprinty.ipynb
+++ b/fingerprinty.ipynb
@@ -2,26 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "6466fac4-22e5-4472-afa7-5131a7ef8bf6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CHEMBL_ID                                             SMILES  \\\n",
-      "0  CHEMBL485  COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...   \n",
-      "1   CHEMBL70  CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...   \n",
-      "2  CHEMBL113                         Cn1c(=O)c2c(ncn2C)n(C)c1=O   \n",
-      "\n",
-      "                                  Morgan_Fingerprint  \n",
-      "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-      "1  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-      "2  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-06T16:16:34.793845Z",
+     "start_time": "2024-06-06T16:16:34.767348Z"
     }
-   ],
+   },
    "source": [
     "from chembl_webresource_client.new_client import new_client\n",
     "from rdkit import Chem\n",
@@ -60,8 +47,26 @@
     "df = pd.DataFrame(results, columns=['CHEMBL_ID', 'SMILES', 'Morgan_Fingerprint'])\n",
     "print(df)\n",
     "\n",
-    "df.to_csv('morgan_fingerprints.csv', index=False)"
-   ]
+    "df.to_csv('./data/morgan_fingerprints.csv', index=False)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   CHEMBL_ID                                             SMILES  \\\n",
+      "0  CHEMBL485  COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...   \n",
+      "1   CHEMBL70  CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...   \n",
+      "2  CHEMBL113                         Cn1c(=O)c2c(ncn2C)n(C)c1=O   \n",
+      "\n",
+      "                                  Morgan_Fingerprint  \n",
+      "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+      "1  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+      "2  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
