--- a/fingerprinty.ipynb
+++ b/fingerprinty.ipynb
@@ -14,6 +14,7 @@
     "from rdkit import Chem\n",
     "from rdkit.Chem import AllChem\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "molecule = new_client.molecule\n",
@@ -49,32 +50,16 @@
     "\n",
     "df.to_csv('./data/morgan_fingerprints.csv', index=False)"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   CHEMBL_ID                                             SMILES  \\\n",
-      "0  CHEMBL485  COc1ccc2c3c1O[C@H]1[C@@H](O)C=C[C@H]4[C@@H](C2...   \n",
-      "1   CHEMBL70  CN1CC[C@]23c4c5ccc(O)c4O[C@H]2[C@@H](O)C=C[C@H...   \n",
-      "2  CHEMBL113                         Cn1c(=O)c2c(ncn2C)n(C)c1=O   \n",
-      "\n",
-      "                                  Morgan_Fingerprint  \n",
-      "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-      "1  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-      "2  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n"
-     ]
-    }
-   ],
-   "execution_count": 5
+   "execution_count": 5,
+   "outputs": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ae5e141f-cf20-4d51-96a8-d35816790946",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [],
+   "outputs": []
   }
  ],
  "metadata": {
