--- a/Clustering_examples_new.ipynb
+++ b/Clustering_examples_new.ipynb
@@ -26,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-12T14:28:51.648429Z",
-     "start_time": "2024-05-12T14:28:51.582043Z"
+     "end_time": "2024-06-07T20:45:10.588074Z",
+     "start_time": "2024-06-07T20:45:09.731685Z"
     }
    },
    "cell_type": "code",
@@ -39,102 +39,18 @@
    "id": "7d9ac90fc833edee",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "      Activity Value [uM]\n",
-       "30           676083.00000\n",
-       "31           758578.00000\n",
-       "32           812831.00000\n",
-       "33           512861.00000\n",
-       "34           107152.00000\n",
-       "...                   ...\n",
-       "1622              0.07943\n",
-       "1630              0.00284\n",
-       "1631              0.15000\n",
-       "1632              1.21500\n",
-       "1645              0.00520\n",
-       "\n",
-       "[519 rows x 1 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Activity Value [uM]</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>676083.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>758578.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>812831.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>512861.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>107152.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1622</th>\n",
-       "      <td>0.07943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1630</th>\n",
-       "      <td>0.00284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1631</th>\n",
-       "      <td>0.15000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1632</th>\n",
-       "      <td>1.21500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1645</th>\n",
-       "      <td>0.00520</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>519 rows × 1 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m df\u001B[38;5;241m=\u001B[39mpd\u001B[38;5;241m.\u001B[39mread_excel(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m./data/assay_m.xlsx\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      2\u001B[0m df \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39mdropna()\n\u001B[1;32m      3\u001B[0m df\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
+     ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
