fixed just db plot

--- a/Clustering_examples.ipynb
+++ b/Clustering_examples.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:12:58.420994Z",
-     "start_time": "2024-06-07T19:12:58.259659Z"
+     "end_time": "2024-06-09T14:17:05.849278Z",
+     "start_time": "2024-06-09T14:17:05.847261Z"
     }
    },
    "source": [
@@ -22,13 +22,13 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:12:58.429703Z",
-     "start_time": "2024-06-07T19:12:58.421557Z"
+     "end_time": "2024-06-09T14:17:05.943794Z",
+     "start_time": "2024-06-09T14:17:05.938326Z"
     }
    },
    "cell_type": "code",
@@ -170,18 +170,18 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:12:58.432459Z",
-     "start_time": "2024-06-07T19:12:58.430380Z"
+     "end_time": "2024-06-09T14:17:05.946645Z",
+     "start_time": "2024-06-09T14:17:05.944573Z"
     }
    },
    "cell_type": "code",
@@ -198,12 +198,12 @@
        "(573, 4)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -214,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:12:59.415551Z",
-     "start_time": "2024-06-07T19:12:58.433099Z"
+     "end_time": "2024-06-09T14:17:07.176347Z",
+     "start_time": "2024-06-09T14:17:05.948630Z"
     }
    },
    "cell_type": "code",
@@ -238,18 +238,18 @@
        "       [ 36.569286  ,  -3.8200138 ]], dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:12:59.849962Z",
-     "start_time": "2024-06-07T19:12:59.416448Z"
+     "end_time": "2024-06-09T14:17:07.573135Z",
+     "start_time": "2024-06-09T14:17:07.177594Z"
     }
    },
    "cell_type": "code",
@@ -275,7 +275,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -286,8 +286,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:12:59.855494Z",
-     "start_time": "2024-06-07T19:12:59.852305Z"
+     "end_time": "2024-06-09T14:17:07.576623Z",
+     "start_time": "2024-06-09T14:17:07.573735Z"
     }
    },
    "cell_type": "code",
@@ -297,13 +297,13 @@
    ],
    "id": "d5219767906b1c21",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:12:59.858140Z",
-     "start_time": "2024-06-07T19:12:59.856080Z"
+     "end_time": "2024-06-09T14:17:07.579389Z",
+     "start_time": "2024-06-09T14:17:07.577749Z"
     }
    },
    "cell_type": "code",
@@ -325,13 +325,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.140153Z",
-     "start_time": "2024-06-07T19:12:59.858790Z"
+     "end_time": "2024-06-09T14:17:07.853405Z",
+     "start_time": "2024-06-09T14:17:07.579981Z"
     }
    },
    "cell_type": "code",
@@ -389,7 +389,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -400,8 +400,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.192015Z",
-     "start_time": "2024-06-07T19:13:00.140765Z"
+     "end_time": "2024-06-09T14:17:07.858605Z",
+     "start_time": "2024-06-09T14:17:07.854004Z"
     }
    },
    "cell_type": "code",
@@ -411,13 +411,13 @@
    ],
    "id": "5640cfc1f20f5a38",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.651794Z",
-     "start_time": "2024-06-07T19:13:00.207563Z"
+     "end_time": "2024-06-09T14:17:08.147389Z",
+     "start_time": "2024-06-09T14:17:07.859254Z"
     }
    },
    "cell_type": "code",
@@ -447,7 +447,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -458,8 +458,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.654854Z",
-     "start_time": "2024-06-07T19:13:00.652490Z"
+     "end_time": "2024-06-09T14:17:08.149964Z",
+     "start_time": "2024-06-09T14:17:08.148092Z"
     }
    },
    "cell_type": "code",
@@ -470,7 +470,7 @@
    ],
    "id": "b8b726784059588c",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -481,8 +481,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.663467Z",
-     "start_time": "2024-06-07T19:13:00.655438Z"
+     "end_time": "2024-06-09T14:17:08.156910Z",
+     "start_time": "2024-06-09T14:17:08.150461Z"
     }
    },
    "cell_type": "code",
@@ -494,7 +494,7 @@
     "#add column names back\n",
     "# get cluster 0\n",
     "df_cluster_0 = df[df['cluster'] == 0]\n",
-    "df_cluster_0.to_csv('./data/cluster_0.csv', sep=';')\n",
+    "df_cluster_0.to_csv('./outputs/cluster_0.csv', sep=';')\n",
     "df_cluster_0\n"
    ],
    "id": "29b2ed1c2c4d633a",
@@ -663,12 +663,12 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -679,14 +679,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.669431Z",
-     "start_time": "2024-06-07T19:13:00.664116Z"
+     "end_time": "2024-06-09T14:17:08.164253Z",
+     "start_time": "2024-06-09T14:17:08.158735Z"
     }
    },
    "cell_type": "code",
    "source": [
     "df_cluster_1 = df[df['cluster'] == 1]\n",
-    "df_cluster_1.to_csv('./data/cluster_1.csv', sep=';')\n",
+    "df_cluster_1.to_csv('./outputs/cluster_1.csv', sep=';')\n",
     "df_cluster_1\n"
    ],
    "id": "f5872d9c1f6f798c",
@@ -855,12 +855,12 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -871,8 +871,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.672008Z",
-     "start_time": "2024-06-07T19:13:00.669981Z"
+     "end_time": "2024-06-09T14:17:08.167413Z",
+     "start_time": "2024-06-09T14:17:08.164956Z"
     }
    },
    "cell_type": "code",
@@ -896,18 +896,18 @@
        "       [ 7.307 , -8.6   , 12.    , 20.    ]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.885104Z",
-     "start_time": "2024-06-07T19:13:00.672453Z"
+     "end_time": "2024-06-09T14:17:08.422837Z",
+     "start_time": "2024-06-09T14:17:08.167857Z"
     }
    },
    "cell_type": "code",
@@ -935,18 +935,18 @@
        "'fig_0.html'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:00.889068Z",
-     "start_time": "2024-06-07T19:13:00.886936Z"
+     "end_time": "2024-06-09T14:17:08.425353Z",
+     "start_time": "2024-06-09T14:17:08.423714Z"
     }
    },
    "cell_type": "code",
@@ -956,7 +956,7 @@
    ],
    "id": "d406d2699320ba33",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -967,8 +967,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:01.060706Z",
-     "start_time": "2024-06-07T19:13:00.890987Z"
+     "end_time": "2024-06-09T14:17:08.525534Z",
+     "start_time": "2024-06-09T14:17:08.425895Z"
     }
    },
    "cell_type": "code",
@@ -1121,18 +1121,18 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:01.079118Z",
-     "start_time": "2024-06-07T19:13:01.066705Z"
+     "end_time": "2024-06-09T14:17:08.590966Z",
+     "start_time": "2024-06-09T14:17:08.526851Z"
     }
    },
    "cell_type": "code",
@@ -1711,18 +1711,18 @@
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:01.091173Z",
-     "start_time": "2024-06-07T19:13:01.081826Z"
+     "end_time": "2024-06-09T14:17:08.602613Z",
+     "start_time": "2024-06-09T14:17:08.592608Z"
     }
    },
    "cell_type": "code",
@@ -1872,18 +1872,18 @@
        "</div>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:04.086073Z",
-     "start_time": "2024-06-07T19:13:01.092383Z"
+     "end_time": "2024-06-09T14:17:09.522376Z",
+     "start_time": "2024-06-09T14:17:08.604490Z"
     }
    },
    "cell_type": "code",
@@ -1908,7 +1908,7 @@
    ],
    "id": "51bb387632a55fbf",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -1919,8 +1919,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:04.948218Z",
-     "start_time": "2024-06-07T19:13:04.087125Z"
+     "end_time": "2024-06-09T14:17:10.431390Z",
+     "start_time": "2024-06-09T14:17:09.523393Z"
     }
    },
    "cell_type": "code",
@@ -1945,7 +1945,7 @@
    ],
    "id": "c650f4118cfaa315",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -1962,8 +1962,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:05.090389Z",
-     "start_time": "2024-06-07T19:13:04.949405Z"
+     "end_time": "2024-06-09T14:17:10.563684Z",
+     "start_time": "2024-06-09T14:17:10.432594Z"
     }
    },
    "cell_type": "code",
@@ -1991,7 +1991,7 @@
    ],
    "id": "5d954db6f0d56af9",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -2002,8 +2002,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:05.254816Z",
-     "start_time": "2024-06-07T19:13:05.091524Z"
+     "end_time": "2024-06-09T14:17:10.701778Z",
+     "start_time": "2024-06-09T14:17:10.564837Z"
     }
    },
    "cell_type": "code",
@@ -2031,7 +2031,7 @@
    ],
    "id": "f5796fd654fba0e8",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -2042,8 +2042,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:05.397461Z",
-     "start_time": "2024-06-07T19:13:05.256185Z"
+     "end_time": "2024-06-09T14:17:10.838417Z",
+     "start_time": "2024-06-09T14:17:10.703028Z"
     }
    },
    "cell_type": "code",
@@ -2068,7 +2068,7 @@
    ],
    "id": "370beceae0b8670",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 36
   },
   {
    "metadata": {},
@@ -2085,8 +2085,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:05.404521Z",
-     "start_time": "2024-06-07T19:13:05.398505Z"
+     "end_time": "2024-06-09T14:17:10.845032Z",
+     "start_time": "2024-06-09T14:17:10.839438Z"
     }
    },
    "cell_type": "code",
@@ -2257,18 +2257,18 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:05.410253Z",
-     "start_time": "2024-06-07T19:13:05.405195Z"
+     "end_time": "2024-06-09T14:17:10.850748Z",
+     "start_time": "2024-06-09T14:17:10.845946Z"
     }
    },
    "cell_type": "code",
@@ -2444,18 +2444,18 @@
        "</div>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:06.128737Z",
-     "start_time": "2024-06-07T19:13:05.410824Z"
+     "end_time": "2024-06-09T14:17:11.558428Z",
+     "start_time": "2024-06-09T14:17:10.851384Z"
     }
    },
    "cell_type": "code",
@@ -2490,20 +2490,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 27
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-07T19:13:06.132038Z",
-     "start_time": "2024-06-07T19:13:06.130139Z"
+     "end_time": "2024-06-09T14:17:11.560552Z",
+     "start_time": "2024-06-09T14:17:11.559238Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "49ad1d8860474ad7",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 39
   }
  ],
  "metadata": {
