Added all files

--- a/Clustering_examples.ipynb
+++ b/Clustering_examples.ipynb
@@ -925,7 +925,7 @@
     "        showlegend=True\n",
     "    )\n",
     ")\n",
-    "pyo.plot(fig_0, filename = 'fig_0.html')"
+    "pyo.plot(fig_0, filename ='plots/fig_0.html')"
    ],
    "id": "2f0e610fdfdc8017",
    "outputs": [
@@ -1903,7 +1903,7 @@
     "        showlegend=True\n",
     "    )\n",
     ")\n",
-    "pyo.plot(fig_1, filename = 'fig_1.html')\n",
+    "pyo.plot(fig_1, filename ='plots/fig_1.html')\n",
     "fig_1.write_image('./fig_1.png')"
    ],
    "id": "51bb387632a55fbf",
@@ -1913,7 +1913,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "![alt text](./fig_1.png)",
+   "source": "![alt text](plots/fig_1.png)",
    "id": "f60f4511fd29fbaf"
   },
   {
@@ -1940,7 +1940,7 @@
     "        showlegend=True\n",
     "    )\n",
     ")\n",
-    "pyo.plot(fig_2, filename = 'fig_2.html')\n",
+    "pyo.plot(fig_2, filename ='plots/fig_2.html')\n",
     "fig_2.write_image('./fig_2.png')"
    ],
    "id": "c650f4118cfaa315",
@@ -1950,7 +1950,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "![alt text](./fig_2.png)",
+   "source": "![alt text](plots/fig_2.png)",
    "id": "ab2d4bb69e7d2972"
   },
   {
@@ -1986,7 +1986,7 @@
     "        showlegend=True\n",
     "    )\n",
     ")\n",
-    "pyo.plot(fig_3, filename = 'fig_3.html')\n",
+    "pyo.plot(fig_3, filename ='plots/fig_3.html')\n",
     "fig_3.write_image('./fig_3.png')"
    ],
    "id": "5d954db6f0d56af9",
@@ -1996,7 +1996,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "![alt text](./fig_3.png)",
+   "source": "![alt text](plots/fig_3.png)",
    "id": "7b0824c846a200e"
   },
   {
@@ -2026,7 +2026,7 @@
     "        showlegend=True\n",
     "    )\n",
     ")\n",
-    "pyo.plot(fig_4, filename = 'fig_4.html')\n",
+    "pyo.plot(fig_4, filename ='plots/fig_4.html')\n",
     "fig_4.write_image('./fig_4.png')"
    ],
    "id": "f5796fd654fba0e8",
@@ -2036,7 +2036,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "![alt text](./fig_4.png)",
+   "source": "![alt text](plots/fig_4.png)",
    "id": "82aecdf4ccbd39fd"
   },
   {
@@ -2073,7 +2073,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "![alt text](./fig_5.png)",
+   "source": "![alt text](plots/fig_5.png)",
    "id": "a8ee551e3291e398"
   },
   {
